# cycleq

./: .gitignore  Benchmarks.hs  CycleQ.cabal  LICENSE  README.md  benchmark  benchmark-Isa.tex  benchmark-mut.tex  cabal.project  cycleq.cabal
benchmarks/: IsaPlanner.hs  Mutual.hs
cycleq-benchmarks/: IsaPlanner.hs  Mutual.hs
our results/: benchmarks - IsaPlanner.tex  benchmarks - Mutual.tex
profile/: Profile.hs  ghc-options
scratch/: Scratch.hs
src/: CycleQ.hs  Cycleq.hs  Normalisation.hs  SizeChange.hs  Syntax.hs  Unconditional.hs
src/CycleQ/: Edge.hs  Environment.hs  Equation.hs  Proof.hs  Prover.hs  Reduction.hs  Simplification.hs  Syntax.hs
src/CycleQ/Proof/: Edge.hs  Proof.hs
src/CycleQ/Syntax/: Clause.hs  Expr.hs  Translation.hs  Type.hs
src/CycleQ/Unique/: Fresh.hs  Unique.hs
src/Cycleq/: Edge.hs  Environment.hs  Equation.hs  Patterns.hs  Proof.hs  Prover.hs  Reduction.hs
test/: IsaPlanner.hs  M.hs  M2.hs  Mutual.hs  P.hs  Test.hs  Z.hs
