cabal-version:      3.4
name:               cycleq
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Eddie
maintainer:         eddie.c.jones@pm.me
build-type:         Simple

library
  exposed-modules:    CycleQ
  
  other-modules:      CycleQ.Syntax.Type,
                      CycleQ.Syntax.Expr,
                      CycleQ.Syntax.Clause,
                      CycleQ.Syntax.Translation,
                      CycleQ.Syntax,
                     
                      CycleQ.Unique.Unique,
                      CycleQ.Unique.Fresh,

                      CycleQ.Proof.Edge,
                      CycleQ.Proof.Proof,

                      CycleQ.Reduction,
                      CycleQ.Simplification,
                      CycleQ.Prover,

  build-depends:      base,
                      mtl,
                      containers,
                      logict,
                      text,
                      process,
                      time,
                      ghc,
                      template-haskell,
                      graphviz,
  
  hs-source-dirs:     src

  default-extensions: 
                      -- Deriving/Typeclasses
                      DerivingVia
                      DeriveTraversable
                      DeriveDataTypeable
                      GeneralizedNewtypeDeriving
                      FlexibleInstances
                      UndecidableInstances
                      InstanceSigs

                      -- Syntax
                      ImportQualifiedPost
                      LambdaCase

                      -- Types
                      ImplicitParams
                      RankNTypes
                      ScopedTypeVariables

  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmissing-export-lists
                      -Wpartial-fields
                      -Wmissing-deriving-strategies
                      -Wunused-packages

                      -Wno-unused-matches
                      -Wno-unused-local-binds
                      -Wno-name-shadowing

                      -fhide-source-paths
                      -freverse-errors

  default-language:   Haskell2010

library isaplanner
  exposed-modules:    IsaPlanner

  hs-source-dirs:     benchmarks

  build-depends:      base, cycleq

  ghc-options:        -fplugin CycleQ

  default-language:   Haskell2010


library mutual
  exposed-modules:    Mutual

  hs-source-dirs:     benchmarks

  build-depends:      base, cycleq

  ghc-options:        -fplugin CycleQ

  default-language:   Haskell2010