cabal-version:        3.0
name:                 cycleq
version:              0.1.0.0
synopsis:             A cyclic equational theorem prover
license:              MIT
license-file:         LICENSE
author:               Eddie Jones
maintainer:           eddie.c.jones@outlook.com
category:             Math

library
  exposed-modules:    CycleQ

  other-modules:      CycleQ.Equation,
                      CycleQ.Environment,
                      CycleQ.Reduction,
                      CycleQ.Edge,
                      CycleQ.Proof,
                      CycleQ.Prover

  hs-source-dirs:     src

  build-depends:      base,
                      containers,
                      mtl,
                      logict,
                      ghc,
                      template-haskell,
                      text,
                      process,
                      graphviz

  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmissing-export-lists
                      -Wpartial-fields
                      -Wmissing-deriving-strategies
                      -Wunused-packages

                      -Wno-unused-matches

  default-language:   Haskell2010

test-suite test
  type:               exitcode-stdio-1.0   

  main-is:            IsaPlanner.hs

  hs-source-dirs:     test

  build-depends:      base, cycleq

  ghc-options:        -fplugin=CycleQ

  default-language:   Haskell2010